--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TPN1</title>
 </head>
 <body>
+    <h1>Mis deportes favorit</h1>
+    <ol>
+        <ul>Futbol</ul>
+        <li>Handball</li>
+        <li>Basquet</li>
+     </ol>
     <h1>Hello</h1>
 </body>
 </html>
