--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <title>TPN1</title>
 </head>
 <body>
-    <h1>Mis deportes favorit</h1>
+    <h1>Mis deportes favoritos</h1>
+    
     <ol>
-        <ul>Futbol</ul>
+        <ol>Futbol</ol>
         <li>Handball</li>
         <li>Basquet</li>
      </ol>
