--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TPN1</title>
+    <style>
+
+      .titulo{
+        text-decoration: underline;
+      }
+
+
+    </style>
 </head>
 <body>
-    <h1>Mis deportes favoritos</h1>
-    
+    <h1>class="titulo">Mis deportes favoritos</h1>
     <ol>
-        <ol>Futbol</ol>
+        <li>Futbol</li>
         <li>Handball</li>
         <li>Basquet</li>
      </ol>
