--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <h1>class="titulo">Mis deportes favoritos</h1>
+    <h1 class="titulo">Mis Deportes Favoritos</h1>
     <ol>
         <li>Futbol</li>
         <li>Handball</li>
