--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         color: black;
         text-decoration: underline;
       }
+      .titulo2{
+        color: black;
+        text-decoration: underline;
+      }
       body {
         background-color: aliceblue;
       }
@@ -18,12 +22,27 @@
 
 </head>
 <body>
-    <h1 class="titulo">Mis Deportes Favoritos</h1>
+  <h1 class="titulo">Mis Superhéroes  Favoritos</h1>
+  <div> 
     <ol>
-        <li>Futbol</li>
-        <li>Handball</li>
-        <li>Basquet</li>
+        <li>Batman</li>
+        <li>Superman</li>
+        <li>Spiderman</li>
      </ol>
+  </div>
+
+  <div>
+    
+    <h1 class= "titulo2"> Mis Villanos Favoritos </h1>
+    <ul>
+      <li>Loki</li>
+      <li>Thanos</li>
+      <li>Joker</li>
+
+
+    </ul>
+
+  </div>
     
 </body>
 </html>
